# shiny-rpc-python

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
examples/: todo_list_annotation.json
examples/todo_list/: base.py  client.py  dtos.py  enums.py  requests.py  responses.py  server.py
examples/todo_list/db/: base.py  types.py
examples/todo_list/methods/: __init__.py  complete_task.py  create_task.py  create_todo_list.py  delete_task.py  delete_todo_list.py  get_todo_list.py  handler.py  increase_task_completion_percent.py  update_task.py  update_todo_list.py
shiny_rpc/: client.py  errors.py  examples.py  message_hander.py  messages.py  server.py  user.py  utils.py
shiny_rpc/annotation_generator/: annotation_generator.py  main.py  rpc_annotation.py  types.py
shiny_rpc/annotation_generator/templates/: base.py.jinja2  client.py.jinja2  dtos.py.jinja2  enums.py.jinja2  handler.py.jinja2  method.py.jinja2  methods_init.py.jinja2  requests_responses.py.jinja2  server.py.jinja2
